source/objects/Error_Event_Log__c/Error_Event_Log__c.object-meta.xml
<CustomObject>
    <label>Error Event Log</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Error Event Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>