source/objects/Error_Event_Log__c/fields/Error_Fix__c.field-meta.xml
<CustomField>
    <fullName>Error_Fix__c</fullName>
    <label>Error Fix</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>