source/objects/Error_Event_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>